@@ -1,10 +1,10 @@
 /**
- * @file xqepo.c
+ * @file xdegnome.c
  * @author Daniel R. Tabin
- * @brief Unit tests for Qepo
+ * @brief Unit tests for Degnome
  */
 
-#include "qepo.h"
+#include "degnome.h"
 #include <stdio.h>
 #include <string.h>
 
@@ -13,13 +13,13 @@ int main(int argc, char **argv){
 
 	if(argc == 2) {
         if(strncmp(argv[1], "-v", 2) != 0) {
-            fprintf(stderr, "usage: xqepo [-v]\n");
+            fprintf(stderr, "usage: xdegnome [-v]\n");
             exit(EXIT_FAILURE);
         }
         verbose = 1;
     }
     else if(argc != 1){
-        fprintf(stderr, "usage: xqepo [-v]\n");
+        fprintf(stderr, "usage: xdegnome [-v]\n");
         exit(EXIT_FAILURE);
     }
 
@@ -29,16 +29,16 @@ int main(int argc, char **argv){
 		printf("Chromosome is length %u\n", chrom_size);
 	}
 
-	Qepo* bom_mom = Qepo_new(); // good parent
-	Qepo* bad_dad = Qepo_new();	// bad parent
-	Qepo* tst_bby = Qepo_new(); // their child
+	Degnome* bom_mom = Degnome_new(); // good parent
+	Degnome* bad_dad = Degnome_new();	// bad parent
+	Degnome* tst_bby = Degnome_new(); // their child
 
 	for(int i = 0; i < chrom_size; i++){
 		bom_mom->dna_array[i] = 2;
-		bad_dad->dna_array[i] = 0;
+		bad_dad->dna_array[i] = 1;
 
-		bom_mom->val += bom_mom->dna_array[i];
-		bad_dad->val += bad_dad->dna_array[i];
+		bom_mom->hat_size += bom_mom->dna_array[i];
+		bad_dad->hat_size += bad_dad->dna_array[i];
 	}
 
 	if(verbose){
@@ -46,10 +46,10 @@ int main(int argc, char **argv){
 		for(int i = 0; i < chrom_size; i++){
        	 	printf("Mom: %lf\t Dad: %f\n", bom_mom->dna_array[i], bad_dad->dna_array[i]);
 		}
-		printf("Mom val: %lf\t Dad val: %f\n", bom_mom->val, bad_dad->val);
+		printf("Mom hat_size: %lf\t Dad hat_size: %f\n", bom_mom->hat_size, bad_dad->hat_size);
 	}
 
-	Qepo_mate(tst_bby, bom_mom, bad_dad);
+	Degnome_mate(tst_bby, bom_mom, bad_dad);
 
 
 	if(verbose){
@@ -57,12 +57,12 @@ int main(int argc, char **argv){
 		for(int i = 0; i < chrom_size; i++){
        	 	printf("Mom: %lf\t Dad: %f\t Kid: %f\n", bom_mom->dna_array[i], bad_dad->dna_array[i], tst_bby->dna_array[i]);
 		}
-		printf("Mom val: %lf\t Dad val: %f\t Kid val: %f\n", bom_mom->val, bad_dad->val, tst_bby->val);
+		printf("Mom hat_size: %lf\t Dad hat_size: %f\t Kid hat_size: %f\n", bom_mom->hat_size, bad_dad->hat_size, tst_bby->hat_size);
 	}
 
-	Qepo_free(bom_mom);
-	Qepo_free(bad_dad);
-	Qepo_free(tst_bby);
+	Degnome_free(bom_mom);
+	Degnome_free(bad_dad);
+	Degnome_free(tst_bby);
 
-	printf("All tests for xqepo completed\n");
+	printf("All tests for xdegnome completed\n");
 }
