@@ -1,3 +1,6 @@
+
+9| Made the back bone of PolygenSim
+8| Renamed Qepos Degnome (digital genome)
  |==========================================================
 7| VERSION 0.1.0 (Qepo Creation)
 6| Made a test program for qepo
